--- a/stock-control/src/app/modules/home/home.component.html
+++ b/stock-control/src/app/modules/home/home.component.html
@@ -3,8 +3,65 @@
     <div class="flex justify-content-center align-content-center text-align-center">
 
       <!--Login-->
-      <form>
-        <p-card></p-card>
+      <form [formGroup]="loginForm" (ngSubmit)="OnSubmitLoginForm()">
+        <p-card
+          styleClass="mt-10"
+          header="Login"
+          subheader="Faça login com sua conta existente!"
+          *ngIf="loginCard">
+
+          <div class="flex justify-content-center align-content-center text-align-center">
+            <input type="email" pInputText formControlName="email" placeholder="Email"/>
+          </div>
+
+          <div class="flex justify-content-center align-content-center text-align-center mt-3">
+            <input type="password" pInputText formControlName="password" placeholder="Senha"/>
+          </div>
+
+          <div class="card flex justify-content-center mt-3">
+            <button type="submit" pButton pRipple label="Login" [disabled]="!loginForm.valid"></button>
+          </div>
+
+          <span class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+          (click)="loginCard=!loginCard"
+          style="cursor: pointer">
+            Criar conta
+          </span>
+
+        </p-card>
+      </form>
+
+      <!--Sign up-->
+      <form [formGroup]="signupForm" (ngSubmit)="OnSubmitSignupForm()">
+        <p-card
+          styleClass="mt-10"
+          header="Criar conta"
+          subheader="Crie já sua conta gratuita!"
+          *ngIf="!loginCard">
+
+          <div class="flex justify-content-center align-content-center text-align-center">
+            <input type="text" pInputText formControlName="name" placeholder="Nome"/>
+          </div>
+
+          <div class="flex justify-content-center align-content-center text-align-center mt-3">
+            <input type="email" pInputText formControlName="email" placeholder="Email"/>
+          </div>
+
+          <div class="flex justify-content-center align-content-center text-align-center mt-3">
+            <input type="password" pInputText formControlName="password" placeholder="Senha"/>
+          </div>
+
+          <div class="card flex justify-content-center mt-3">
+            <button type="submit" pButton pRipple label="Criar conta" [disabled]="!this.signupForm.valid"></button>
+          </div>
+
+          <span class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+          (click)="loginCard=!loginCard"
+          style="cursor: pointer">
+            Fazer login
+          </span>
+
+        </p-card>
       </form>
     </div>
   </div>
