--- a/stock-control/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/stock-control/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -15,4 +15,8 @@
       styleClass="bg-indigo-800 p-button-secondary" routerLinkActive="exact_route" class="mr-2"></p-button>
 
   </div>
+
+  <div class="p-toolbar-group-end">
+    <p-button label="Sair" icon="pi pi-sign-out" styleClass="p-button-danger" (onClick)="handleLogout()"></p-button>
+  </div>
 </p-toolbar>
